2004-08-08  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * gw/smsbox.c: fix double encoding when transcoding from UCS2 to 
      UTF-8 or ISO-8859-1

2004-08-07  Stipe Tolj  <stolj@wapme.de>
    * doc/userguide/userguide.xml: parsed the beast via aspell and got
      rid of some grammer and spelling issues.

2004-08-07 Alexander Malysh <olek2002 at hotmail.com>
    * gw/sms.c: fixed whitespaces.

2004-08-05 Alexander Malysh <olek2002 at hotmail.com>
    * gw/gw/bb_smscconn.c: applied patch that that make it possible to
      start/stop/restart of all smscconn's that have equals smsc-id's
      instead of only one.
      [Msg-Id: <cek0ss$5kp$1@sea.gmane.org>].

2004-07-20 Alexander Malysh <olek2002 at hotmail.com>
    * gwlib/date.c: fixed 'date_parse_iso' and 'date_create_iso'.
      date_create_iso: 'Z' at the and menas UTC time and not local time.
      date_parse_iso: never works?!

2004-07-18 Alexander Malysh <olek2002 at hotmail.com>
    * gw/smsc/smsc_smpp.c: fixed bug #143.

2004-07-14  Stipe Tolj  <tolj@wapme-systems.de> 
    * Making development release 1.3.2.