@@ -1,3 +1,9 @@
+2004-08-08 Alexander Malysh <olek2002 at hotmail.com>
+    * gwlib/gw-rwlock.[ch], gw/dlr_mem.c, gw/bb_smscconn.c: got
+      rid of PTHREAD_RWLOCK_INITIALIZER because it's not on opengroup
+      standard (PTHREAD_RWLOCK_INITIALIZER is deleted for alignment with
+      IEEE Std 1003.1j-2000).
+
 2004-08-08  Bruno Rodrigues  <bruno.rodrigues@litux.org>
     * gw/smsbox.c: fix double encoding when transcoding from UCS2 to 
       UTF-8 or ISO-8859-1
